92_-_Extensions/Packages_C_Header/C-Header/Xrender.h

#define _XRENDER_H_
typedef struct {
    PictFormat		id;
    int			type;
    int			depth;
    XRenderDirectFormat	direct;
    Colormap		colormap;
} XRenderPictFormat;
typedef struct _XRenderPictureAttributes {
    int 		repeat;
    Picture		alpha_map;
    int			alpha_x_origin;
    int			alpha_y_origin;
    int			clip_x_origin;
    int			clip_y_origin;
    Pixmap		clip_mask;
    Bool		graphics_exposures;
    int			subwindow_mode;
    int			poly_edge;
    int			poly_mode;
    Atom		dither;
    Bool		component_alpha;
} XRenderPictureAttributes;
typedef struct {
    unsigned short   red;
    unsigned short   green;
    unsigned short   blue;
    unsigned short   alpha;
} XRenderColor;
typedef struct _XGlyphInfo {
    unsigned short  width;
    unsigned short  height;
    short	    x;
    short	    y;
    short	    xOff;
    short	    yOff;
} XGlyphInfo;
typedef struct _XGlyphElt8 {
    GlyphSet		    glyphset;
     char	    *chars;
    int			    nchars;
    int			    xOff;
    int			    yOff;
} XGlyphElt8;
typedef struct _XGlyphElt16 {
    GlyphSet		    glyphset;
     unsigned short  *chars;
    int			    nchars;
    int			    xOff;
    int			    yOff;
} XGlyphElt16;
typedef struct _XGlyphElt32 {
    GlyphSet		    glyphset;
     unsigned int    *chars;
    int			    nchars;
    int			    xOff;
    int			    yOff;
} XGlyphElt32;
typedef double	XDouble;
typedef struct _XPointDouble {
    XDouble  x, y;
} XPointDouble;
#define XDoubleToFixed(f)    ((XFixed) ((f) * 65536))
#define XFixedToDouble(f)    (((XDouble) (f)) / 65536)
typedef int XFixed;
typedef struct _XPointFixed {
    XFixed  x, y;
} XPointFixed;
typedef struct _XTriangle {
    XPointFixed	p1, p2, p3;
} XTriangle;
typedef struct _XTrapezoid {
    XFixed  top, bottom;
    XLineFixed	left, right;
} XTrapezoid;
typedef struct _XTransform {
    XFixed  matrix[3][3];
} XTransform;
typedef struct _XFilters {
    int	    nfilter;
    char    **filter;
    int	    nalias;
    short   *alias;
} XFilters;
typedef struct _XIndexValue {
    unsigned long    pixel;
    unsigned short   red, green, blue, alpha;
} XIndexValue;
typedef struct _XAnimCursor {
    Cursor	    cursor;
    unsigned long   delay;
} XAnimCursor;
typedef struct _XTrap {
    XSpanFix	    top, bottom;
} XTrap;
typedef struct _XLinearGradient {
    XPointFixed p1;
    XPointFixed p2;
} XLinearGradient;
typedef struct _XRadialGradient {
    XCircle inner;
    XCircle outer;
} XRadialGradient;
typedef struct _XConicalGradient {
    XPointFixed center;
    XFixed angle; /* in degrees */
} XConicalGradient;
XRenderPictFormat *
XRenderFindStandardFormat (Display		*dpy,
			   int			format);
XIndexValue *
XRenderQueryPictIndexValues(Display			*dpy,
			     XRenderPictFormat	*format,
			    int				*num);
Picture
XRenderCreatePicture (Display				*dpy,
		      Drawable				drawable,
		       XRenderPictFormat		*format,
		      unsigned long			valuemask,
		       XRenderPictureAttributes	*attributes);
void
XRenderChangePicture (Display				*dpy,
		      Picture				picture,
		      unsigned long			valuemask,
		       XRenderPictureAttributes  *attributes);
void
XRenderSetPictureClipRectangles (Display	    *dpy,
				 Picture	    picture,
				 int		    xOrigin,
				 int		    yOrigin,
				  XRectangle *rects,
				 int		    n);
void
XRenderSetPictureClipRegion (Display	    *dpy,
			     Picture	    picture,
			     Region	    r);
void
XRenderSetPictureTransform (Display	    *dpy,
			    Picture	    picture,
			    XTransform	    *transform);
void
XRenderFreePicture (Display                   *dpy,
		    Picture                   picture);
void
XRenderComposite (Display   *dpy,
		  int	    op,
		  Picture   src,
		  Picture   mask,
		  Picture   dst,
		  int	    src_x,
		  int	    src_y,
		  int	    mask_x,
		  int	    mask_y,
		  int	    dst_x,
		  int	    dst_y,
		  unsigned int	width,
		  unsigned int	height);
GlyphSet
XRenderCreateGlyphSet (Display *dpy,  XRenderPictFormat *format);
GlyphSet
XRenderReferenceGlyphSet (Display *dpy, GlyphSet existing);
void
XRenderFreeGlyphSet (Display *dpy, GlyphSet glyphset);
void
XRenderAddGlyphs (Display		*dpy,
		  GlyphSet		glyphset,
		   Glyph		*gids,
		   XGlyphInfo	*glyphs,
		  int			nglyphs,
		   char		*images,
		  int			nbyte_images);
void
XRenderFreeGlyphs (Display	    *dpy,
		   GlyphSet	    glyphset,
		    Glyph    *gids,
		   int		    nglyphs);
void
XRenderCompositeString8 (Display		    *dpy,
			 int			    op,
			 Picture		    src,
			 Picture		    dst,
			  XRenderPictFormat  *maskFormat,
			 GlyphSet		    glyphset,
			 int			    xSrc,
			 int			    ySrc,
			 int			    xDst,
			 int			    yDst,
			  char		    *string,
			 int			    nchar);
void
XRenderCompositeString16 (Display		    *dpy,
			  int			    op,
			  Picture		    src,
			  Picture		    dst,
			   XRenderPictFormat *maskFormat,
			  GlyphSet		    glyphset,
			  int			    xSrc,
			  int			    ySrc,
			  int			    xDst,
			  int			    yDst,
			   unsigned short    *string,
			  int			    nchar);
void
XRenderCompositeString32 (Display		    *dpy,
			  int			    op,
			  Picture		    src,
			  Picture		    dst,
			   XRenderPictFormat *maskFormat,
			  GlyphSet		    glyphset,
			  int			    xSrc,
			  int			    ySrc,
			  int			    xDst,
			  int			    yDst,
			   unsigned int	    *string,
			  int			    nchar);
void
XRenderCompositeText8 (Display			    *dpy,
		       int			    op,
		       Picture			    src,
		       Picture			    dst,
		        XRenderPictFormat    *maskFormat,
		       int			    xSrc,
		       int			    ySrc,
		       int			    xDst,
		       int			    yDst,
		        XGlyphElt8	    *elts,
		       int			    nelt);
void
XRenderCompositeText16 (Display			    *dpy,
			int			    op,
			Picture			    src,
			Picture			    dst,
			 XRenderPictFormat   *maskFormat,
			int			    xSrc,
			int			    ySrc,
			int			    xDst,
			int			    yDst,
			 XGlyphElt16	    *elts,
			int			    nelt);
void
XRenderCompositeText32 (Display			    *dpy,
			int			    op,
			Picture			    src,
			Picture			    dst,
			 XRenderPictFormat   *maskFormat,
			int			    xSrc,
			int			    ySrc,
			int			    xDst,
			int			    yDst,
			 XGlyphElt32	    *elts,
			int			    nelt);
void
XRenderFillRectangle (Display		    *dpy,
		      int		    op,
		      Picture		    dst,
		       XRenderColor  *color,
		      int		    x,
		      int		    y,
		      unsigned int	    width,
		      unsigned int	    height);
void
XRenderFillRectangles (Display		    *dpy,
		       int		    op,
		       Picture		    dst,
		        XRenderColor *color,
		        XRectangle   *rectangles,
		       int		    n_rects);
void
XRenderCompositeTrapezoids (Display		*dpy,
			    int			op,
			    Picture		src,
			    Picture		dst,
			     XRenderPictFormat	*maskFormat,
			    int			xSrc,
			    int			ySrc,
			     XTrapezoid	*traps,
			    int			ntrap);
void
XRenderCompositeTriangles (Display		*dpy,
			   int			op,
			   Picture		src,
			   Picture		dst,
			     XRenderPictFormat	*maskFormat,
			   int			xSrc,
			   int			ySrc,
			    XTriangle	*triangles,
			   int			ntriangle);
void
XRenderCompositeTriStrip (Display		*dpy,
			  int			op,
			  Picture		src,
			  Picture		dst,
			     XRenderPictFormat	*maskFormat,
			  int			xSrc,
			  int			ySrc,
			   XPointFixed	*points,
			  int			npoint);
void
XRenderCompositeTriFan (Display			*dpy,
			int			op,
			Picture			src,
			Picture			dst,
			 XRenderPictFormat	*maskFormat,
			int			xSrc,
			int			ySrc,
			 XPointFixed	*points,
			int			npoint);
void
XRenderCompositeDoublePoly (Display		    *dpy,
			    int			    op,
			    Picture		    src,
			    Picture		    dst,
			     XRenderPictFormat	*maskFormat,
			    int			    xSrc,
			    int			    ySrc,
			    int			    xDst,
			    int			    yDst,
			     XPointDouble    *fpoints,
			    int			    npoints,
			    int			    winding);
Status
XRenderParseColor(Display	*dpy,
		  char		*spec,
		  XRenderColor	*def);
Cursor
XRenderCreateCursor (Display	    *dpy,
		     Picture	    source,
		     unsigned int   x,
		     unsigned int   y);
XFilters *
XRenderQueryFilters (Display *dpy, Drawable drawable);
void
XRenderSetPictureFilter (Display    *dpy,
			 Picture    picture,
			 const char *filter,
			 XFixed	    *params,
			 int	    nparams);
Cursor
XRenderCreateAnimCursor (Display	*dpy,
			 int		ncursor,
			 XAnimCursor	*cursors);
void
XRenderAddTraps (Display	    *dpy,
		 Picture	    picture,
		 int		    xOff,
		 int		    yOff,
		  XTrap	    *traps,
		 int		    ntrap);
Picture XRenderCreateSolidFill (Display *dpy,
                                const XRenderColor *color);
Picture XRenderCreateLinearGradient (Display *dpy,
                                     const XLinearGradient *gradient,
                                     const XFixed *stops,
                                     const XRenderColor *colors,
                                     int nstops);
Picture XRenderCreateRadialGradient (Display *dpy,
                                     const XRadialGradient *gradient,
                                     const XFixed *stops,
                                     const XRenderColor *colors,
                                     int nstops);
Picture XRenderCreateConicalGradient (Display *dpy,
                                      const XConicalGradient *gradient,
                                      const XFixed *stops,
                                      const XRenderColor *colors,
                                      int nstops);