Aufloesung_ermitteln/Xrender.pas


function XRenderFindStandardFormat(dpy:PDisplay; format:longint):PXRenderPictFormat;cdecl;external;
function XRenderQueryPictIndexValues(dpy:PDisplay; format:PXRenderPictFormat; num:Plongint):PXIndexValue;cdecl;external;
function XRenderCreatePicture(dpy:PDisplay; drawable:TDrawable; format:PXRenderPictFormat; valuemask:dword; attributes:PXRenderPictureAttributes):TPicture;cdecl;external;
procedure XRenderChangePicture(dpy:PDisplay; picture:TPicture; valuemask:dword; attributes:PXRenderPictureAttributes);cdecl;external;
procedure XRenderSetPictureClipRectangles(dpy:PDisplay; picture:TPicture; xOrigin:longint; yOrigin:longint; rects:PXRectangle; 
            n:longint);cdecl;external;
procedure XRenderSetPictureClipRegion(dpy:PDisplay; picture:TPicture; r:TRegion);cdecl;external;
procedure XRenderSetPictureTransform(dpy:PDisplay; picture:TPicture; transform:PXTransform);cdecl;external;
procedure XRenderFreePicture(dpy:PDisplay; picture:TPicture);cdecl;external;
procedure XRenderComposite(dpy:PDisplay; op:longint; src:TPicture; mask:TPicture; dst:TPicture; 
            src_x:longint; src_y:longint; mask_x:longint; mask_y:longint; dst_x:longint; 
            dst_y:longint; width:dword; height:dword);cdecl;external;
function XRenderCreateGlyphSet(dpy:PDisplay; format:PXRenderPictFormat):TGlyphSet;cdecl;external;
function XRenderReferenceGlyphSet(dpy:PDisplay; existing:TGlyphSet):TGlyphSet;cdecl;external;
procedure XRenderFreeGlyphSet(dpy:PDisplay; glyphset:TGlyphSet);cdecl;external;
procedure XRenderAddGlyphs(dpy:PDisplay; glyphset:TGlyphSet; gids:PGlyph; glyphs:PXGlyphInfo; nglyphs:longint; 
            images:Pchar; nbyte_images:longint);cdecl;external;
procedure XRenderFreeGlyphs(dpy:PDisplay; glyphset:TGlyphSet; gids:PGlyph; nglyphs:longint);cdecl;external;
procedure XRenderCompositeString8(dpy:PDisplay; op:longint; src:TPicture; dst:TPicture; maskFormat:PXRenderPictFormat; 
            glyphset:TGlyphSet; xSrc:longint; ySrc:longint; xDst:longint; yDst:longint; 
            _string:Pchar; nchar:longint);cdecl;external;
procedure XRenderCompositeString16(dpy:PDisplay; op:longint; src:TPicture; dst:TPicture; maskFormat:PXRenderPictFormat; 
            glyphset:TGlyphSet; xSrc:longint; ySrc:longint; xDst:longint; yDst:longint; 
            _string:Pword; nchar:longint);cdecl;external;
procedure XRenderCompositeString32(dpy:PDisplay; op:longint; src:TPicture; dst:TPicture; maskFormat:PXRenderPictFormat; 
            glyphset:TGlyphSet; xSrc:longint; ySrc:longint; xDst:longint; yDst:longint; 
            _string:Pdword; nchar:longint);cdecl;external;
procedure XRenderCompositeText8(dpy:PDisplay; op:longint; src:TPicture; dst:TPicture; maskFormat:PXRenderPictFormat; 
            xSrc:longint; ySrc:longint; xDst:longint; yDst:longint; elts:PXGlyphElt8; 
            nelt:longint);cdecl;external;
procedure XRenderCompositeText16(dpy:PDisplay; op:longint; src:TPicture; dst:TPicture; maskFormat:PXRenderPictFormat; 
            xSrc:longint; ySrc:longint; xDst:longint; yDst:longint; elts:PXGlyphElt16; 
            nelt:longint);cdecl;external;
procedure XRenderCompositeText32(dpy:PDisplay; op:longint; src:TPicture; dst:TPicture; maskFormat:PXRenderPictFormat; 
            xSrc:longint; ySrc:longint; xDst:longint; yDst:longint; elts:PXGlyphElt32; 
            nelt:longint);cdecl;external;
procedure XRenderFillRectangle(dpy:PDisplay; op:longint; dst:TPicture; color:PXRenderColor; x:longint; 
            y:longint; width:dword; height:dword);cdecl;external;
procedure XRenderFillRectangles(dpy:PDisplay; op:longint; dst:TPicture; color:PXRenderColor; rectangles:PXRectangle; 
            n_rects:longint);cdecl;external;
procedure XRenderCompositeTrapezoids(dpy:PDisplay; op:longint; src:TPicture; dst:TPicture; maskFormat:PXRenderPictFormat; 
            xSrc:longint; ySrc:longint; traps:PXTrapezoid; ntrap:longint);cdecl;external;
procedure XRenderCompositeTriangles(dpy:PDisplay; op:longint; src:TPicture; dst:TPicture; maskFormat:PXRenderPictFormat; 
            xSrc:longint; ySrc:longint; triangles:PXTriangle; ntriangle:longint);cdecl;external;
procedure XRenderCompositeTriStrip(dpy:PDisplay; op:longint; src:TPicture; dst:TPicture; maskFormat:PXRenderPictFormat; 
            xSrc:longint; ySrc:longint; points:PXPointFixed; npoint:longint);cdecl;external;
procedure XRenderCompositeTriFan(dpy:PDisplay; op:longint; src:TPicture; dst:TPicture; maskFormat:PXRenderPictFormat; 
            xSrc:longint; ySrc:longint; points:PXPointFixed; npoint:longint);cdecl;external;
procedure XRenderCompositeDoublePoly(dpy:PDisplay; op:longint; src:TPicture; dst:TPicture; maskFormat:PXRenderPictFormat; 
            xSrc:longint; ySrc:longint; xDst:longint; yDst:longint; fpoints:PXPointDouble; 
            npoints:longint; winding:longint);cdecl;external;
function XRenderParseColor(dpy:PDisplay; spec:Pchar; def:PXRenderColor):TStatus;cdecl;external;
function XRenderCreateCursor(dpy:PDisplay; source:TPicture; x:dword; y:dword):TCursor;cdecl;external;
function XRenderQueryFilters(dpy:PDisplay; drawable:TDrawable):PXFilters;cdecl;external;
(* Const before type ignored *)
procedure XRenderSetPictureFilter(dpy:PDisplay; picture:TPicture; filter:Pchar; params:PXFixed; nparams:longint);cdecl;external;
function XRenderCreateAnimCursor(dpy:PDisplay; ncursor:longint; cursors:PXAnimCursor):TCursor;cdecl;external;
procedure XRenderAddTraps(dpy:PDisplay; picture:TPicture; xOff:longint; yOff:longint; traps:PXTrap; 
            ntrap:longint);cdecl;external;
(* Const before type ignored *)
function XRenderCreateSolidFill(dpy:PDisplay; color:PXRenderColor):TPicture;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function XRenderCreateLinearGradient(dpy:PDisplay; gradient:PXLinearGradient; stops:PXFixed; colors:PXRenderColor; nstops:longint):TPicture;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function XRenderCreateRadialGradient(dpy:PDisplay; gradient:PXRadialGradient; stops:PXFixed; colors:PXRenderColor; nstops:longint):TPicture;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function XRenderCreateConicalGradient(dpy:PDisplay; gradient:PXConicalGradient; stops:PXFixed; colors:PXRenderColor; nstops:longint):TPicture;cdecl;external;
{_XFUNCPROTOEND }
{$endif}
{ _XRENDER_H_  }

implementation

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function XDoubleToFixed(f : longint) : TXFixed;
begin
  XDoubleToFixed:=TXFixed(f*65536);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function XFixedToDouble(f : longint) : longint;
begin
  XFixedToDouble:=(TXDouble(f))/65536;
end;


end.
